2013-08-16  Alexander V. Lukyanov <lav@yars.free.net>

	* Speedometer.cc, Speedometer.h: (GetStrProper) new method for proper unit names.
	* FileCopy.cc: use Speedometer::GetStrProper for logging.
	* FileCopy.cc, LocalDir.cc: use FD_CLOEXEC on descriptors.
	* FtpListInfo.cc: fixed MLSD parsing for semicolons in file names.

2013-08-13  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, resource.cc: add woraround for wrong multiline
	  replies and ftp:strict-multiline setting.
	* SFtp.cc: add a workaround for RouterOS v6 - symlink as the root dir.

2013-08-05  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: don't decode %xx for plain file names of meta-info.

2013-07-30  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc, SFtp.h: request more information about symlink targets.

2013-07-29  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: follow symlinks when requested.

2013-07-23  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: add progress meter for parent mirrors.
	* Job.cc, Job.h: (GetCmdLine) new virtual method.
	* FileSet.cc, FileSet.h: (CountBytes) new method.
	* ftpclass.cc: move line and all_lines along with connection.

2013-07-15  Alexander V. Lukyanov <lav@yars.free.net>

	* attach.h: pass all three std fds.
	* lftp.cc: simplify attach/detach logic; get rid of goto;
	  handle Detached condition.

2013-07-04  Alexander V. Lukyanov <lav@yars.free.net>

	* network.cc: don't use IPV6_V6ONLY if not defined.
	  (from y-iida@secom.co.jp).
	* FileSet.cc: (FileInfo::Merge) copy size properly.

2013-07-04  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc: recognize and ignore human readable sizes.

2013-05-30  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_tinfo.cc: fixed segfault when there is no TERM env var.
	* buffer_zlib.cc: fixed compilation with older zlib.

2013-05-28  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer_zlib.cc, buffer_zlib.h: implement inflator.